[gd_scene load_steps=10 format=3 uid="uid://b4ftnmhqirli8"]

[ext_resource type="Script" uid="uid://cy6hft16hh51o" path="res://Scripts/kandang/kandangAnoa.gd" id="1_dxcep"]
[ext_resource type="PackedScene" uid="uid://cn1c5j4vw1k3q" path="res://Assets/hewan/anoa.glb" id="1_itocg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxcep"]
bg_color = Color(0.7620216, 0.6369014, 0.4565243, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dxcep"]
color = Color(0.4, 0.4, 0.4, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0uu1"]
bg_color = Color(0.2, 0.33333334, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dxcep"]
sky_top_color = Color(0.46485126, 1.2464644, 1.8834103, 1)
sky_horizon_color = Color(0.44367492, 0.6929659, 0.8641208, 1)
ground_bottom_color = Color(0.19756827, 0.31690994, 0.2801894, 1)
ground_horizon_color = Color(0.19447815, 0.50556034, 0.3832984, 1)

[sub_resource type="Sky" id="Sky_l0v4u"]
sky_material = SubResource("ProceduralSkyMaterial_dxcep")

[sub_resource type="Environment" id="Environment_r0uu1"]
background_mode = 2
sky = SubResource("Sky_l0v4u")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0v4u"]
bg_color = Color(0.8677694, 0.76258445, 0.6138669, 0.76862746)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.41270024, 0.32917723, 0.2042326, 0.94509804)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.5676015, 0.45833212, 0.29858112, 0.94509804)

[node name="KandangAnoa" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dxcep")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07058824, 0.20784314, 0.14117648, 1)

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 106.0
offset_bottom = 49.0
text = "KEMBALI"

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(340, 600)
layout_mode = 0
offset_left = 791.0
offset_right = 1165.0
offset_bottom = 651.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dxcep")

[node name="JudulLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.5
offset_right = 69.5
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "ANOA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FotoHewan" type="TextureRect" parent="Panel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 600.0
offset_bottom = 300.0
stretch_mode = 3

[node name="ButtonKuis" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56100005
anchor_top = 0.84400004
anchor_right = 0.91400003
anchor_bottom = 0.933
offset_left = -5.814026
offset_top = -10.444031
offset_right = -5.8359985
offset_bottom = -4.5820313
text = "QUIZ"

[node name="ButtonAudio" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 95.0
offset_top = 538.0
offset_right = 167.0
offset_bottom = 602.0
text = "suara
hewan"

[node name="InfoContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_right = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="LatinLabel" type="Label" parent="Panel/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6666667, 0.6666667, 0.6666667, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/InfoContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_dxcep")

[node name="DeskripsiSingkat" type="Label" parent="Panel/InfoContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
autowrap_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/InfoContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="LabelHabitat" type="Label" parent="Panel/InfoContainer/GridContainer"]
layout_mode = 2

[node name="ValueHabitat" type="Label" parent="Panel/InfoContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8666667, 0.8666667, 0.8666667, 1)
autowrap_mode = 2
justification_flags = 162

[node name="LabelMakanan" type="Label" parent="Panel/InfoContainer/GridContainer"]
layout_mode = 2

[node name="ValueMakanan" type="Label" parent="Panel/InfoContainer/GridContainer"]
layout_mode = 2

[node name="LabelStatus" type="Label" parent="Panel/InfoContainer/GridContainer"]
layout_mode = 2

[node name="ValueStatus" type="Label" parent="Panel/InfoContainer/GridContainer"]
layout_mode = 2

[node name="FaktaMenarik" type="RichTextLabel" parent="Panel/InfoContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_r0uu1")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(803, 623)
layout_mode = 0
offset_right = 803.0
offset_bottom = 662.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(803, 662)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.40888798, 0, 0.9125846, 0, 1, 0, -0.9125846, 0, 0.40888798, 1.2521853, 0.23733574, -0.42547107)
current = true
near = 0.1
far = 100.0

[node name="anoa" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_itocg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.9377043)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport"]

[node name="Light" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.70710677, -0.49999997, 0.49999997, 0, 0.70710677, 0.70710677, -0.70710677, -0.49999997, 0.49999997, 0, 0, 0)
light_energy = 1.5
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_r0uu1")

[node name="ButtonKembali" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 32.0
offset_right = 97.0
offset_bottom = 79.0
text = "kembali
"

[node name="AudioNarasi" type="AudioStreamPlayer" parent="."]

[node name="NarasiPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 488.0
offset_right = 755.0
offset_bottom = 617.0
theme_override_styles/panel = SubResource("StyleBoxFlat_l0v4u")

[node name="NarasiTeks" type="RichTextLabel" parent="NarasiPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = -2.0
offset_right = 713.0
offset_bottom = 127.0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1
